css/header.css
/* header.css */
#wrap {
  width: 100%;
}

header {
  width: 100%;
  background-color: transparent;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9999;
  transition: .8s;
}

/* header_top */
.header_top {
  border-bottom: 1px solid #e7e7e7;
  padding: 0 2.5rem;
}

.header_top ul {
  display: flex;
  gap: 0.5rem;
  justify-content: flex-end;
  padding: 0.25rem 0;
}

.header_top ul li {
  display: flex;
  align-items: center;
}

.header_top ul li:first-child::after {
  content: '';
  display: block;
  width: 1px;
  height: 8px;
  background-color: rgba(0, 0, 0, 0.1);
  margin-left: 0.5rem;
}

.header_top ul li a {
  display: flex;
  align-items: center;
  gap: 0.25rem;
  font-size: 0.9rem;
  letter-spacing: -0.05rem;
}

.header_top ul li a span {
  color: #1b1b1b;
}

/* header_container */
header .header_container {
  width: 100%;
  height: 120px;
  overflow: visible;
  transition: .5s;
}

.header_container .header_section {
  width: 100%;
  height: 120px;
  padding: 0 2.5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  border-bottom: 1px solid transparent;
  transition: .5s;
}

/* logo */
.header_sec01 {
  height: 100%;
  display: flex;
  align-items: center;
}

.header_sec01 a {
  display: block;
  width: 144px;
  height: 35px;
}

/* header menu */
.header_sec02 {
  height: 100%;
}

.header_sec02 .gnb01 {
  height: 100%;
}

.header_sec02 .gnb01 .depth01 {
  height: 100%;
  display: flex;
}

.header_sec02 .gnb01 .depth01 > li {
  height: 100%;
  position: relative;
  padding: 0 calc(1.5rem + 1vw);
}

.header_sec02 .gnb01 .depth01 > li > a {
  width: 100%;
  height: 100%;
  position: relative;
  display: block;
  align-content: center;
  font-size: clamp(1rem, 1vw, 1.2rem);
  transition: .3s;
}

.header_sec02 .gnb01 .depth01 > li:hover > a {
  color: #E72F28;
}

.header_sec02 .gnb01 .depth01 > li:hover > a::before {
  content: '';
  display: inline-block;
  width: 0.35rem;
  height: 0.35rem;
  background-color: #E72F28;
  border-radius: 100%;
  position: absolute;
  right: -0.5rem;
}

.header_sec02 .gnb01 .depth01 > li:hover > a::after {
  content: '';
  display: block;
  width: 100%;
  height: 2px;
  background-color: #E72F28;
  border-radius: 30px;
  position: absolute;
  bottom: -2px;
}

.header_sec02 .gnb01 .depth01 > li > .depth02 {
  width: 100%;
  height: 420px;
  position: absolute;
  top: calc(100% + 0.5rem);
  opacity: 0;
  transition: .5s;
}

.header_sec02 .gnb01 .depth01 > li > .depth02 > li {
  width: 100%;
  padding: 0.5rem 0;
}

.header_sec02 .gnb01 .depth01 > li > .depth02 > li > a {
  font-size: 1rem;
  transition: .3s;
}

.header_sec02 .gnb01 .depth01 > li > .depth02 > li:hover > a {
  color: #E72F28;
}

/* lang */
.header_sec03 {
  height: 100%;
}

.header_sec03 .right {
  height: 100%;
  display: flex;
  gap: 2rem;
  align-items: center;
}

.header_sec03 .right .lang {
  height: 100%;
  font-size: clamp(0.9rem, 1vw, 1rem);
  font-weight: 700;
  align-content: center;
  position: relative;
}

.header_sec03 .right .lang p {
  height: 100%;
  display: flex;
  gap: 0.5rem;
  align-items: center;
  cursor: pointer;
}

.header_sec03 .right .lang ul {
  height: 0;
  overflow: hidden;
  position: absolute;
  top: calc(50% + 1rem);
  left: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #fff;
  border-radius: 1rem;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  transition: .5s;
}

.header_sec03 .right .lang ul.on {
  height: 64px;
}

.header_sec03 .right .lang ul li {
  padding: 0.25rem 1rem;
}

.header_sec03 .right .lang ul li:first-child {
  padding-bottom: 0;
}

/* hamberger */
.header_sec03 .right .hamberger {
  width: 24px;
  height: 20px;
  cursor: pointer;
}

.header_sec03 .right .hamberger a {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.header_sec03 .right .hamberger a span {
  display: block;
  width: 100%;
  height: 2px;
  background-color: #1b1b1b;
  border-radius: 30px;
  transition: .5s;
}

.header_sec03 .right .hamberger a.on span:first-child {
  transform: translateY(9px) rotate(-45deg) ;
}

.header_sec03 .right .hamberger a.on span:nth-child(2) {
  opacity: 0;
}

.header_sec03 .right .hamberger a.on span:last-child {
  transform: translateY(-9px) rotate(45deg);
}

